# ison

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  release-all.yml
benchmark/: README.md
ison-cli/: README.md  pyproject.toml
ison-cli/src/ison_cli/: __init__.py  database.py  formats.py  main.py  tokens.py
ison-cli/tests/: __init__.py  test_cli.py
ison-cpp/: CHANGELOG.md  README.md
ison-cpp/include/: ison_parser.hpp
ison-cpp/tests/: test_ison_parser.cpp
ison-go/: README.md  go.mod  ison.go  ison_test.go
ison-go/validation/: validation.go
ison-js/: CHANGELOG.md  README.md  package-lock.json  package.json
ison-js/scripts/: build-esm.js  build-validation.js
ison-js/src/: ison-parser.js  validation.js
ison-js/test/: test_ison_parser.js  test_validation.js
ison-py/: CHANGELOG.md  README.md  pyproject.toml
ison-py/src/ison_parser/: __init__.py
ison-py/tests/: test_ison_parser.py
ison-rust/: CHANGELOG.md  Cargo.toml  README.md
ison-rust/examples/: basic.rs
ison-rust/src/: lib.rs
ison-ts/: CHANGELOG.md  README.md  package-lock.json  package.json
ison-ts/src/: index.test.ts  index.ts  validation.ts
ison-vscode/: README.md  package-lock.json  package.json
ison-vscode/icons/: ison-icon-theme.json
ison-vscode/src/: extension.ts
isonantic/: README.md  pyproject.toml
isonantic-cpp/: README.md
isonantic-cpp/examples/: basic.cpp
isonantic-cpp/tests/: test_isonantic.cpp
isonantic-go/: README.md  go.mod
isonantic-rust/: Cargo.toml  README.md
isonantic-ts/: README.md  package-lock.json  package.json
isonantic-ts/src/: index.test.ts  index.ts
isonantic/src/isonantic/: parsing.py
isonantic/tests/: test_isonantic.py
n8n-nodes-ison/: README.md  package-lock.json  package.json  tsconfig.json
(+9 files in other folders)
